# network_system

./: .clang-tidy  .cppcheck  .env.example  .gitignore  BASELINE.md  BASELINE_KO.md  CHANGELOG.md  CHANGELOG_KO.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOC_REVIEW_REPORT.md  Doxyfile  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_KO.md  IMPROVEMENTS.md  IMPROVEMENTS_KO.md  IMPROVEMENT_PLAN.md  INTEGRATION_STATUS.md  INTEGRATION_STATUS_KO.md  INTEGRATION_SUCCESS_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  LICENSE-THIRD-PARTY  MIGRATION.md  MIGRATION_CHECKLIST.md  Makefile  PHASE2_IMPLEMENTATION_PLAN.md  README.kr.md  README.md  README_8md.html  README_KO.md  RELEASE_NOTES.md  SECURITY.md  STRUCTURE.md  THREAD_SYSTEM_INTEGRATION.md  TODO.md  TODO_KO.md  WEBSOCKET_IMPLEMENTATION_PLAN.md  (+7842 more)
benchmarks/: BASELINE.md  CMakeLists.txt  README.md  README_KO.md  connection_bench.cpp  facade_vs_direct_bench.cpp  http_bench.cpp  main_bench.cpp  message_throughput_bench.cpp  session_bench.cpp  tcp_loopback_bench.cpp  tcp_receive_bench.cpp
examples/: CMakeLists.txt  README.md  basic_usage.cpp  concepts_example.cpp  connection_pool.cpp  grpc_service_example.cpp  http2_server_example.cpp  http_facade_example.cpp  memory_profile_demo.cpp  network_metrics_example.cpp  network_tracing_example.cpp  observer_pattern.cpp  quic_facade_example.cpp  simple_http_client.cpp  tcp_client.cpp  tcp_echo_server.cpp  thread_integration_example.cpp  tls_policy_example.cpp  udp_echo.cpp  udp_example.cpp  unified_messaging_example.cpp  websocket_chat.cpp
examples/messaging_system_integration/: CMakeLists.txt
examples/migration/: README.md  legacy_client_example.cpp  unified_client_example.cpp
fuzz/: CMakeLists.txt  fuzz_grpc_frame.cpp  fuzz_hpack_decode.cpp  fuzz_http2_frame.cpp  fuzz_quic_frame.cpp  fuzz_quic_varint.cpp  generate_corpus.py
integration_tests/: CMakeLists.txt  Makefile  README.md  README_KO.md
integration_tests/failures/: error_handling_test.cpp
integration_tests/framework/: memory_profiler.cpp  memory_profiler.h  result_writer.cpp  result_writer.h  system_fixture.h  test_helpers.h
integration_tests/performance/: network_performance_test.cpp  tcp_load_test.cpp  udp_load_test.cpp  websocket_load_test.cpp
integration_tests/scenarios/: connection_lifecycle_test.cpp  protocol_integration_test.cpp
libs/network-all/: CMakeLists.txt  Makefile  README.md  network-all-config.cmake.in
libs/network-core/: CMakeLists.txt  Makefile  README.md
libs/network-grpc/: CMakeLists.txt  Makefile  README.md  network-grpc-config.cmake.in
libs/network-http2/: CMakeLists.txt  Makefile  README.md  network-http2-config.cmake.in
libs/network-quic/: CMakeLists.txt  Makefile  README.md  network-quic-config.cmake.in
libs/network-tcp/: CMakeLists.txt  Makefile  README.md  network-tcp-config.cmake.in
libs/network-udp/: CMakeLists.txt  Makefile  README.md  network-udp-config.cmake.in
libs/network-websocket/: CMakeLists.txt  Makefile  README.md  network-websocket-config.cmake.in
network-core/: CMakeLists.txt  README.md  network-core-config.cmake.in
tests/: CMakeLists.txt  Makefile  benchmark_tests.cpp  integration_test_full.cpp  test_facade_validation.cpp  test_grpc_client_server.cpp  test_grpc_frame.cpp  test_grpc_integration.cpp  test_grpc_official_wrapper.cpp  test_grpc_service_registry.cpp  test_http2_client.cpp  test_http2_frame.cpp  test_http2_frame_extended.cpp  test_http2_hpack.cpp  test_http2_hpack_rfc7541.cpp  test_http2_server.cpp  test_http_facade.cpp  test_memory_profiler_session_timeout.cpp  test_messaging_quic_client.cpp  test_messaging_quic_server.cpp  test_messaging_ws_client.cpp  test_messaging_ws_server.cpp  test_network_config_http_error.cpp  test_quic_connection.cpp  test_quic_crypto.cpp  test_quic_ecn.cpp  test_quic_facade.cpp  test_quic_flow_congestion_rtt.cpp  test_quic_frame.cpp  test_quic_loss_detection.cpp  test_quic_packet.cpp  test_quic_pmtud.cpp  test_quic_session_ticket.cpp  test_quic_socket.cpp  test_quic_stream.cpp  test_quic_varint.cpp  test_tcp_facade.cpp  test_udp_facade.cpp  test_websocket_facade.cpp  thread_pool_manager_test.cpp  (+4 more)
tests/failure/: CMakeLists.txt  Makefile  boundary_test.cpp  network_failure_test.cpp
tests/helpers/: dtls_test_helpers.h  mock_monitor.h
tests/integration/: CMakeLists.txt  Makefile  http_server_client_test.cpp  session_manager_integration_test.cpp  test_compatibility.cpp  test_e2e.cpp  test_integration.cpp  test_metrics_integration.cpp  test_quic_e2e.cpp  test_tracing_integration.cpp  test_websocket_e2e.cpp
tests/performance/: benchmark.cpp  grpc_benchmarks.cpp
tests/stress/: messaging_stress_test.cpp  stress_test.cpp
tests/support/: CMakeLists.txt  README.md  hermetic_transport_fixture.cpp  hermetic_transport_fixture.h  messaging_loopback_fixture.cpp  messaging_loopback_fixture.h  mock_h2_server_peer.cpp  mock_h2_server_peer.h  mock_tls_socket.cpp  mock_tls_socket.h  mock_udp_peer.cpp  mock_udp_peer.h  mock_ws_handshake.cpp  mock_ws_handshake.h
tests/unified/: unified_interfaces_test.cpp
tests/unit/: buffer_pool_test.cpp  callback_indices_test.cpp  common_defs_test.cpp  compression_pipeline_test.cpp  connection_pool_test.cpp  container_integration_test.cpp  core_client_test.cpp  core_server_test.cpp  experimental_quic_client_test.cpp  experimental_quic_server_test.cpp  facade_id_generation_test.cpp  grpc_client_branch_test.cpp  grpc_client_test.cpp  health_monitor_test.cpp  hpack_branch_test.cpp  hpack_coverage_test.cpp  hpack_extra_coverage_test.cpp  hpack_test.cpp  http2_client_branch_test.cpp  http2_client_coverage_test.cpp  http2_client_extended_coverage_test.cpp  http2_client_test.cpp  http2_request_test.cpp  http2_server_branch_test.cpp  http2_server_coverage_test.cpp  http2_server_stream_test.cpp  http2_server_test.cpp  http_client_test.cpp  http_error_coverage_test.cpp  http_facade_test.cpp  http_parser_branch_test.cpp  http_parser_coverage_test.cpp  http_parser_test.cpp  http_server_test.cpp  http_types_test.cpp  io_context_thread_manager_test.cpp  logger_integration_test.cpp  (+133 more)
(+1341 files in other folders)
